# Advent_of_Code_2025

./: README.md
Day_1/: Day1.cc  Makefile  day1_p1.cc
Day_2/: day2_p1.cc
Day_3/: Makefile  day3_p2.cc
KingBenny101/: .gitignore  CMakeLists.txt
KingBenny101/day10p1/: CMakeLists.txt  main.cpp
KingBenny101/day10p2/: CMakeLists.txt  main.cpp
KingBenny101/day11p1/: CMakeLists.txt  main.cpp
KingBenny101/day11p2/: CMakeLists.txt  main.cpp
KingBenny101/day12p1/: CMakeLists.txt  main.cpp
KingBenny101/day1p1/: .gitignore  CMakeLists.txt  main.cpp
KingBenny101/day1p2/: .gitignore  CMakeLists.txt  main.cpp
KingBenny101/day2p1/: .gitignore  CMakeLists.txt  main.cpp
KingBenny101/day2p2/: .gitignore  CMakeLists.txt  main.cpp
KingBenny101/day3p1/: .gitignore  CMakeLists.txt  main.cpp
KingBenny101/day3p2/: .gitignore  CMakeLists.txt  main.cpp
KingBenny101/day4p1/: .gitignore  CMakeLists.txt  main.cpp
KingBenny101/day4p2/: .gitignore  CMakeLists.txt  main.cpp
KingBenny101/day5p1/: .gitignore  CMakeLists.txt  main.cpp
KingBenny101/day5p2/: .gitignore  CMakeLists.txt  main.cpp
KingBenny101/day6p1/: CMakeLists.txt  main.cpp
KingBenny101/day6p2/: CMakeLists.txt  main.cpp
KingBenny101/day7p1/: CMakeLists.txt  main.cpp
KingBenny101/day7p2/: CMakeLists.txt  main.cpp
KingBenny101/day8p1/: CMakeLists.txt  main.cpp
KingBenny101/day8p2/: CMakeLists.txt  main.cpp
KingBenny101/day9p1/: CMakeLists.txt  main.cpp
KingBenny101/day9p2/: CMakeLists.txt  main.cpp
KingBenny101/template/: CMakeLists.txt  main.cpp
StrawHatVigz/Day_1/: Day1  Makefile  (+1 more)
(+3 files in other folders)
