cmake_minimum_required(VERSION 3.10)
project(AoC2025 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(day1p1)
add_subdirectory(day1p2)
add_subdirectory(day2p1)
add_subdirectory(day2p2)
add_subdirectory(day3p1)
add_subdirectory(day3p2)
add_subdirectory(day4p1)
add_subdirectory(day4p2)
add_subdirectory(day5p1)
add_subdirectory(day5p2)
add_subdirectory(day6p1)
add_subdirectory(day6p2)
add_subdirectory(day7p1)
add_subdirectory(day7p2)
add_subdirectory(day8p1)
add_subdirectory(day8p2)
add_subdirectory(day9p1)
add_subdirectory(day9p2)
add_subdirectory(day10p1)
add_subdirectory(day10p2)
add_subdirectory(day11p1)
add_subdirectory(day11p2)
add_subdirectory(day12p1)